Fix text centering on Safari

--- a/src/styles/sections/pricing.less
+++ b/src/styles/sections/pricing.less
@@ -15,6 +15,7 @@ section#pricing {
       display: grid;
       justify-content: center;
       align-items: center;
+      text-align: center;
     }
   }
 
